# LODE-GPs

./: .gitmodules
.github/workflows/: python-test.yml
lodegp/: LODEGP.py
lodegp/GP_helpers/: README.md  pyproject.toml
lodegp/GP_helpers/helpers/: data_functions.py  example_kernels.py  gp_classes.py  plotting_functions.py  training_functions.py  util_functions.py
tests/: test.ipynb  test_schreiben.py  testkernels.py
